src/observer/sql/parser/yacc_sql.output
Grammar

    0 $accept: commands $end

    1 commands: command_wrapper opt_semicolon

    2 command_wrapper: calc_stmt
    3                | select_stmt
    4                | insert_stmt
    5                | update_stmt
    6                | delete_stmt
    7                | create_table_stmt
    8                | drop_table_stmt
    9                | show_tables_stmt
   10                | show_index_stmt
   11                | desc_table_stmt
   12                | create_index_stmt
   13                | drop_index_stmt
   14                | sync_stmt
   15                | begin_stmt
   16                | commit_stmt
   17                | rollback_stmt
   18                | load_data_stmt
   19                | explain_stmt
   20                | set_variable_stmt
   21                | help_stmt
   22                | exit_stmt

   23 exit_stmt: EXIT

   24 help_stmt: HELP

   25 sync_stmt: SYNC

   26 begin_stmt: TRX_BEGIN

   27 commit_stmt: TRX_COMMIT

   28 rollback_stmt: TRX_ROLLBACK

   29 drop_table_stmt: DROP TABLE ID

   30 show_tables_stmt: SHOW TABLES

   31 show_index_stmt: SHOW INDEX FROM ID

   32 desc_table_stmt: DESC ID

   33 unique_marker: ε
   34              | UNIQUE

   35 create_index_stmt: CREATE unique_marker INDEX ID ON ID LBRACE ID rel_list RBRACE

   36 drop_index_stmt: DROP INDEX ID ON ID

   37 nullable_marker: ε
   38                | UNNULLABLE
   39                | NULLABLE

   40 create_table_stmt: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE

   41 attr_def_list: ε
   42              | COMMA attr_def attr_def_list

   43 attr_def: ID type nullable_marker LBRACE number RBRACE
   44         | ID type nullable_marker

   45 number: NUMBER

   46 type: INT_T
   47     | STRING_T
   48     | TEXT_T
   49     | FLOAT_T
   50     | DATE_T

   51 insert_stmt: INSERT INTO ID VALUES LBRACE value_with_MINUS value_list_with_MINUS RBRACE insert_list

   52 insert_list: ε
   53            | COMMA LBRACE value_with_MINUS value_list_with_MINUS RBRACE insert_list

   54 value_list_with_MINUS: ε
   55                      | COMMA value_with_MINUS value_list_with_MINUS

   56 value_with_MINUS: NULL_T
   57                 | NUMBER
   58                 | '-' NUMBER
   59                 | FLOAT
   60                 | DATE
   61                 | SSS

   62 value: NULL_T
   63      | NUMBER
   64      | FLOAT
   65      | DATE
   66      | SSS

   67 delete_stmt: DELETE FROM ID where

   68 update_stmt: UPDATE ID SET update_expr where

   69 update_expr: ID EQ LBRACE select_stmt RBRACE update_expr_list
   70            | ID EQ value update_expr_list

   71 update_expr_list: ε
   72                 | COMMA ID EQ LBRACE select_stmt RBRACE update_expr_list
   73                 | COMMA ID EQ value update_expr_list

   74 select_stmt: SELECT select_attr FROM ID rel_list where order group_by having
   75            | SELECT select_attr FROM join where order group_by having

   76 join: ID INNER_JOIN ID join_equal join_list

   77 join_list: INNER_JOIN ID join_equal join_list
   78          | ε

   79 join_equal: ε
   80           | ON a_expr

   81 calc_stmt: CALC expression_list

   82 expression_list: expression
   83                | expression COMMA expression_list

   84 expression: expression '+' expression
   85           | expression '-' expression
   86           | expression '*' expression
   87           | expression '/' expression
   88           | LBRACE expression RBRACE
   89           | value
   90           | '-' expression

   91 a_expr: value
   92       | rel_attr
   93       | select_stmt_with_paren
   94       | c_expr
   95       | '-' a_expr
   96       | '+' a_expr
   97       | a_expr '+' a_expr
   98       | a_expr '-' a_expr
   99       | a_expr '*' a_expr
  100       | a_expr '/' a_expr
  101       | a_expr AND a_expr
  102       | a_expr OR a_expr
  103       | a_expr EQ a_expr
  104       | a_expr LT a_expr
  105       | a_expr GT a_expr
  106       | a_expr LE a_expr
  107       | a_expr GE a_expr
  108       | a_expr NE a_expr
  109       | a_expr LIKE a_expr
  110       | a_expr NOT_LIKE a_expr
  111       | a_expr IS_NOT a_expr
  112       | a_expr IS a_expr
  113       | a_expr NOT_IN a_expr
  114       | a_expr IN a_expr
  115       | EXISTS LBRACE select_stmt RBRACE
  116       | NOT_EXISTS LBRACE select_stmt RBRACE

  117 c_expr: LBRACE a_expr RBRACE
  118       | function
  119       | value_list_LALR

  120 value_list_LALR: LBRACE value_list_LA RBRACE

  121 select_stmt_with_paren: LBRACE select_stmt RBRACE

  122 value_list_LA: value_list_LA COMMA value
  123              | value COMMA value

  124 select_attr: '*' a_expr_list
  125            | a_expr a_expr_list

  126 function: func_LA a_expr RBRACE
  127         | func_LA '*' RBRACE

  128 func_LA: func_name LBRACE

  129 func_name: AGG_MAX
  130          | AGG_MIN
  131          | AGG_COUNT
  132          | AGG_AVG
  133          | AGG_SUM

  134 rel_attr: ID
  135         | ID DOT ID

  136 attr_list: ε
  137          | COMMA rel_attr attr_list

  138 a_expr_list: ε
  139            | COMMA a_expr a_expr_list

  140 rel_list: ε
  141         | COMMA ID rel_list

  142 group_by: ε
  143         | GROUP_BY rel_attr attr_list

  144 having: ε
  145       | HAVING a_expr

  146 order: ε
  147      | ORDER_BY rel_attr asc_or_desc order_list

  148 order_list: ε
  149           | COMMA rel_attr asc_or_desc order_list

  150 asc_or_desc: ε
  151            | ASC
  152            | DESC

  153 where: ε
  154      | WHERE a_expr

  155 load_data_stmt: LOAD DATA INFILE SSS INTO TABLE ID

  156 explain_stmt: EXPLAIN command_wrapper

  157 set_variable_stmt: SET ID EQ value

  158 opt_semicolon: ε
  159              | SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 86 99 124 127
    '+' (43) 84 96 97
    '-' (45) 58 85 90 95 98
    '/' (47) 87 100
    error (256)
    SEMICOLON (258) 159
    CREATE (259) 35 40
    DROP (260) 29 36
    TABLE (261) 29 40 155
    TABLES (262) 30
    INDEX (263) 31 35 36
    CALC (264) 81
    SELECT (265) 74 75
    DESC (266) 32 152
    ASC (267) 151
    AGG_MAX (268) 129
    AGG_MIN (269) 130
    AGG_COUNT (270) 131
    AGG_AVG (271) 132
    AGG_SUM (272) 133
    GROUP_BY (273) 143
    NULLABLE (274) 39
    UNNULLABLE (275) 38
    SHOW (276) 30 31
    SYNC (277) 25
    INSERT (278) 51
    UNIQUE (279) 34
    DELETE (280) 67
    UPDATE (281) 68
    LBRACE (282) 35 40 43 51 53 69 72 88 115 116 117 120 121 128
    RBRACE (283) 35 40 43 51 53 69 72 88 115 116 117 120 121 126 127
    COMMA (284) 42 53 55 72 73 83 122 123 137 139 141 149
    TRX_BEGIN (285) 26
    TRX_COMMIT (286) 27
    TRX_ROLLBACK (287) 28
    INT_T (288) 46
    STRING_T (289) 47
    FLOAT_T (290) 49
    DATE_T (291) 50
    NULL_T (292) 56 62
    TEXT_T (293) 48
    HELP (294) 24
    EXIT (295) 23
    DOT (296) 135
    INTO (297) 51 155
    VALUES (298) 51
    FROM (299) 31 67 74 75
    WHERE (300) 154
    OR (301) 102
    HAVING (302) 145
    AND (303) 101
    SET (304) 68 157
    ON (305) 35 36 80
    LOAD (306) 155
    DATA (307) 155
    INFILE (308) 155
    EXPLAIN (309) 156
    EQ (310) 69 70 72 73 103 157
    LT (311) 104
    GT (312) 105
    LE (313) 106
    GE (314) 107
    NE (315) 108
    LIKE (316) 109
    NOT_LIKE (317) 110
    IS (318) 112
    IS_NOT (319) 111
    INNER_JOIN (320) 76 77
    NOT_IN (321) 113
    IN (322) 114
    NOT_EXISTS (323) 116
    EXISTS (324) 115
    ORDER_BY (325) 147
    NUMBER <number> (326) 45 57 58 63
    FLOAT <floats> (327) 59 64
    DATE <dates> (328) 60 65
    ID <string> (329) 29 31 32 35 36 40 43 44 51 67 68 69 70 72 73 74 76 77 134 135 141 155 157
    SSS <string> (330) 61 66 155
    UMINUS (331)


Nonterminals, with rules where they appear

    $accept (81)
        on left: 0
    commands <sql_node> (82)
        on left: 1
        on right: 0
    command_wrapper <sql_node> (83)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 1 156
    exit_stmt <sql_node> (84)
        on left: 23
        on right: 22
    help_stmt <sql_node> (85)
        on left: 24
        on right: 21
    sync_stmt <sql_node> (86)
        on left: 25
        on right: 14
    begin_stmt <sql_node> (87)
        on left: 26
        on right: 15
    commit_stmt <sql_node> (88)
        on left: 27
        on right: 16
    rollback_stmt <sql_node> (89)
        on left: 28
        on right: 17
    drop_table_stmt <sql_node> (90)
        on left: 29
        on right: 8
    show_tables_stmt <sql_node> (91)
        on left: 30
        on right: 9
    show_index_stmt <sql_node> (92)
        on left: 31
        on right: 10
    desc_table_stmt <sql_node> (93)
        on left: 32
        on right: 11
    unique_marker <boolean> (94)
        on left: 33 34
        on right: 35
    create_index_stmt <sql_node> (95)
        on left: 35
        on right: 12
    drop_index_stmt <sql_node> (96)
        on left: 36
        on right: 13
    nullable_marker <boolean> (97)
        on left: 37 38 39
        on right: 43 44
    create_table_stmt <sql_node> (98)
        on left: 40
        on right: 7
    attr_def_list <attr_infos> (99)
        on left: 41 42
        on right: 40 42
    attr_def <attr_info> (100)
        on left: 43 44
        on right: 40 42
    number <number> (101)
        on left: 45
        on right: 43
    type <number> (102)
        on left: 46 47 48 49 50
        on right: 43 44
    insert_stmt <sql_node> (103)
        on left: 51
        on right: 4
    insert_list <insert_list> (104)
        on left: 52 53
        on right: 51 53
    value_list_with_MINUS <value_list> (105)
        on left: 54 55
        on right: 51 53 55
    value_with_MINUS <value> (106)
        on left: 56 57 58 59 60 61
        on right: 51 53 55
    value <value> (107)
        on left: 62 63 64 65 66
        on right: 70 73 89 91 122 123 157
    delete_stmt <sql_node> (108)
        on left: 67
        on right: 6
    update_stmt <sql_node> (109)
        on left: 68
        on right: 5
    update_expr <update_expr> (110)
        on left: 69 70
        on right: 68
    update_expr_list <update_expr> (111)
        on left: 71 72 73
        on right: 69 70 72 73
    select_stmt <sql_node> (112)
        on left: 74 75
        on right: 3 69 72 115 116 121
    join <join_list> (113)
        on left: 76
        on right: 75
    join_list <join_list> (114)
        on left: 77 78
        on right: 76 77
    join_equal <a_expr> (115)
        on left: 79 80
        on right: 76 77
    calc_stmt <sql_node> (116)
        on left: 81
        on right: 2
    expression_list <expression_list> (117)
        on left: 82 83
        on right: 81 83
    expression <expression> (118)
        on left: 84 85 86 87 88 89 90
        on right: 82 83 84 85 86 87 88 90
    a_expr <a_expr> (119)
        on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116
        on right: 80 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 117 125 126 139 145 154
    c_expr <a_expr> (120)
        on left: 117 118 119
        on right: 94
    value_list_LALR <a_expr> (121)
        on left: 120
        on right: 119
    select_stmt_with_paren <a_expr> (122)
        on left: 121
        on right: 93
    value_list_LA <value_list> (123)
        on left: 122 123
        on right: 120 122
    select_attr <a_expr_list> (124)
        on left: 124 125
        on right: 74 75
    function <a_expr> (125)
        on left: 126 127
        on right: 118
    func_LA <func_name> (126)
        on left: 128
        on right: 126 127
    func_name <func_name> (127)
        on left: 129 130 131 132 133
        on right: 128
    rel_attr <rel_attr> (128)
        on left: 134 135
        on right: 92 137 143 147 149
    attr_list <rel_attr_list> (129)
        on left: 136 137
        on right: 137 143
    a_expr_list <a_expr_list> (130)
        on left: 138 139
        on right: 124 125 139
    rel_list <relation_list> (131)
        on left: 140 141
        on right: 35 74 141
    group_by <rel_attr_list> (132)
        on left: 142 143
        on right: 74 75
    having <a_expr> (133)
        on left: 144 145
        on right: 74 75
    order <order_by_list> (134)
        on left: 146 147
        on right: 74 75
    order_list <order_by_list> (135)
        on left: 148 149
        on right: 147 149
    asc_or_desc <boolean> (136)
        on left: 150 151 152
        on right: 147 149
    where <a_expr> (137)
        on left: 153 154
        on right: 67 68 74 75
    load_data_stmt <sql_node> (138)
        on left: 155
        on right: 18
    explain_stmt <sql_node> (139)
        on left: 156
        on right: 19
    set_variable_stmt <sql_node> (140)
        on left: 157
        on right: 20
    opt_semicolon (141)
        on left: 158 159
        on right: 1


State 0

    0 $accept: • commands $end

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    DESC          shift, and go to state 5
    SHOW          shift, and go to state 6
    SYNC          shift, and go to state 7
    INSERT        shift, and go to state 8
    DELETE        shift, and go to state 9
    UPDATE        shift, and go to state 10
    TRX_BEGIN     shift, and go to state 11
    TRX_COMMIT    shift, and go to state 12
    TRX_ROLLBACK  shift, and go to state 13
    HELP          shift, and go to state 14
    EXIT          shift, and go to state 15
    SET           shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    commands           go to state 19
    command_wrapper    go to state 20
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    show_index_stmt    go to state 29
    desc_table_stmt    go to state 30
    create_index_stmt  go to state 31
    drop_index_stmt    go to state 32
    create_table_stmt  go to state 33
    insert_stmt        go to state 34
    delete_stmt        go to state 35
    update_stmt        go to state 36
    select_stmt        go to state 37
    calc_stmt          go to state 38
    load_data_stmt     go to state 39
    explain_stmt       go to state 40
    set_variable_stmt  go to state 41


State 1

   35 create_index_stmt: CREATE • unique_marker INDEX ID ON ID LBRACE ID rel_list RBRACE
   40 create_table_stmt: CREATE • TABLE ID LBRACE attr_def attr_def_list RBRACE

    TABLE   shift, and go to state 42
    UNIQUE  shift, and go to state 43

    $default  reduce using rule 33 (unique_marker)

    unique_marker  go to state 44


State 2

   29 drop_table_stmt: DROP • TABLE ID
   36 drop_index_stmt: DROP • INDEX ID ON ID

    TABLE  shift, and go to state 45
    INDEX  shift, and go to state 46


State 3

   81 calc_stmt: CALC • expression_list

    LBRACE  shift, and go to state 47
    NULL_T  shift, and go to state 48
    NUMBER  shift, and go to state 49
    FLOAT   shift, and go to state 50
    DATE    shift, and go to state 51
    SSS     shift, and go to state 52
    '-'     shift, and go to state 53

    value            go to state 54
    expression_list  go to state 55
    expression       go to state 56


State 4

   74 select_stmt: SELECT • select_attr FROM ID rel_list where order group_by having
   75            | SELECT • select_attr FROM join where order group_by having

    AGG_MAX     shift, and go to state 57
    AGG_MIN     shift, and go to state 58
    AGG_COUNT   shift, and go to state 59
    AGG_AVG     shift, and go to state 60
    AGG_SUM     shift, and go to state 61
    LBRACE      shift, and go to state 62
    NULL_T      shift, and go to state 48
    NOT_EXISTS  shift, and go to state 63
    EXISTS      shift, and go to state 64
    NUMBER      shift, and go to state 49
    FLOAT       shift, and go to state 50
    DATE        shift, and go to state 51
    ID          shift, and go to state 65
    SSS         shift, and go to state 52
    '+'         shift, and go to state 66
    '-'         shift, and go to state 67
    '*'         shift, and go to state 68

    value                   go to state 69
    a_expr                  go to state 70
    c_expr                  go to state 71
    value_list_LALR         go to state 72
    select_stmt_with_paren  go to state 73
    select_attr             go to state 74
    function                go to state 75
    func_LA                 go to state 76
    func_name               go to state 77
    rel_attr                go to state 78


State 5

   32 desc_table_stmt: DESC • ID

    ID  shift, and go to state 79


State 6

   30 show_tables_stmt: SHOW • TABLES
   31 show_index_stmt: SHOW • INDEX FROM ID

    TABLES  shift, and go to state 80
    INDEX   shift, and go to state 81


State 7

   25 sync_stmt: SYNC •

    $default  reduce using rule 25 (sync_stmt)


State 8

   51 insert_stmt: INSERT • INTO ID VALUES LBRACE value_with_MINUS value_list_with_MINUS RBRACE insert_list

    INTO  shift, and go to state 82


State 9

   67 delete_stmt: DELETE • FROM ID where

    FROM  shift, and go to state 83


State 10

   68 update_stmt: UPDATE • ID SET update_expr where

    ID  shift, and go to state 84


State 11

   26 begin_stmt: TRX_BEGIN •

    $default  reduce using rule 26 (begin_stmt)


State 12

   27 commit_stmt: TRX_COMMIT •

    $default  reduce using rule 27 (commit_stmt)


State 13

   28 rollback_stmt: TRX_ROLLBACK •

    $default  reduce using rule 28 (rollback_stmt)


State 14

   24 help_stmt: HELP •

    $default  reduce using rule 24 (help_stmt)


State 15

   23 exit_stmt: EXIT •

    $default  reduce using rule 23 (exit_stmt)


State 16

  157 set_variable_stmt: SET • ID EQ value

    ID  shift, and go to state 85


State 17

  155 load_data_stmt: LOAD • DATA INFILE SSS INTO TABLE ID

    DATA  shift, and go to state 86


State 18

  156 explain_stmt: EXPLAIN • command_wrapper

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    DESC          shift, and go to state 5
    SHOW          shift, and go to state 6
    SYNC          shift, and go to state 7
    INSERT        shift, and go to state 8
    DELETE        shift, and go to state 9
    UPDATE        shift, and go to state 10
    TRX_BEGIN     shift, and go to state 11
    TRX_COMMIT    shift, and go to state 12
    TRX_ROLLBACK  shift, and go to state 13
    HELP          shift, and go to state 14
    EXIT          shift, and go to state 15
    SET           shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    command_wrapper    go to state 87
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    show_index_stmt    go to state 29
    desc_table_stmt    go to state 30
    create_index_stmt  go to state 31
    drop_index_stmt    go to state 32
    create_table_stmt  go to state 33
    insert_stmt        go to state 34
    delete_stmt        go to state 35
    update_stmt        go to state 36
    select_stmt        go to state 37
    calc_stmt          go to state 38
    load_data_stmt     go to state 39
    explain_stmt       go to state 40
    set_variable_stmt  go to state 41


State 19

    0 $accept: commands • $end

    $end  shift, and go to state 88


State 20

    1 commands: command_wrapper • opt_semicolon

    SEMICOLON  shift, and go to state 89

    $default  reduce using rule 158 (opt_semicolon)

    opt_semicolon  go to state 90


State 21

   22 command_wrapper: exit_stmt •

    $default  reduce using rule 22 (command_wrapper)


State 22

   21 command_wrapper: help_stmt •

    $default  reduce using rule 21 (command_wrapper)


State 23

   14 command_wrapper: sync_stmt •

    $default  reduce using rule 14 (command_wrapper)


State 24

   15 command_wrapper: begin_stmt •

    $default  reduce using rule 15 (command_wrapper)


State 25

   16 command_wrapper: commit_stmt •

    $default  reduce using rule 16 (command_wrapper)


State 26

   17 command_wrapper: rollback_stmt •

    $default  reduce using rule 17 (command_wrapper)


State 27

    8 command_wrapper: drop_table_stmt •

    $default  reduce using rule 8 (command_wrapper)


State 28

    9 command_wrapper: show_tables_stmt •

    $default  reduce using rule 9 (command_wrapper)


State 29

   10 command_wrapper: show_index_stmt •

    $default  reduce using rule 10 (command_wrapper)


State 30

   11 command_wrapper: desc_table_stmt •

    $default  reduce using rule 11 (command_wrapper)


State 31

   12 command_wrapper: create_index_stmt •

    $default  reduce using rule 12 (command_wrapper)


State 32

   13 command_wrapper: drop_index_stmt •

    $default  reduce using rule 13 (command_wrapper)


State 33

    7 command_wrapper: create_table_stmt •

    $default  reduce using rule 7 (command_wrapper)


State 34

    4 command_wrapper: insert_stmt •

    $default  reduce using rule 4 (command_wrapper)


State 35

    6 command_wrapper: delete_stmt •

    $default  reduce using rule 6 (command_wrapper)


State 36

    5 command_wrapper: update_stmt •

    $default  reduce using rule 5 (command_wrapper)


State 37

    3 command_wrapper: select_stmt •

    $default  reduce using rule 3 (command_wrapper)


State 38

    2 command_wrapper: calc_stmt •

    $default  reduce using rule 2 (command_wrapper)


State 39

   18 command_wrapper: load_data_stmt •

    $default  reduce using rule 18 (command_wrapper)


State 40

   19 command_wrapper: explain_stmt •

    $default  reduce using rule 19 (command_wrapper)


State 41

   20 command_wrapper: set_variable_stmt •

    $default  reduce using rule 20 (command_wrapper)


State 42

   40 create_table_stmt: CREATE TABLE • ID LBRACE attr_def attr_def_list RBRACE

    ID  shift, and go to state 91


State 43

   34 unique_marker: UNIQUE •

    $default  reduce using rule 34 (unique_marker)


State 44

   35 create_index_stmt: CREATE unique_marker • INDEX ID ON ID LBRACE ID rel_list RBRACE

    INDEX  shift, and go to state 92


State 45

   29 drop_table_stmt: DROP TABLE • ID

    ID  shift, and go to state 93


State 46

   36 drop_index_stmt: DROP INDEX • ID ON ID

    ID  shift, and go to state 94


State 47

   88 expression: LBRACE • expression RBRACE

    LBRACE  shift, and go to state 47
    NULL_T  shift, and go to state 48
    NUMBER  shift, and go to state 49
    FLOAT   shift, and go to state 50
    DATE    shift, and go to state 51
    SSS     shift, and go to state 52
    '-'     shift, and go to state 53

    value       go to state 54
    expression  go to state 95


State 48

   62 value: NULL_T •

    $default  reduce using rule 62 (value)


State 49

   63 value: NUMBER •

    $default  reduce using rule 63 (value)


State 50

   64 value: FLOAT •

    $default  reduce using rule 64 (value)


State 51

   65 value: DATE •

    $default  reduce using rule 65 (value)


State 52

   66 value: SSS •

    $default  reduce using rule 66 (value)


State 53

   90 expression: '-' • expression

    LBRACE  shift, and go to state 47
    NULL_T  shift, and go to state 48
    NUMBER  shift, and go to state 49
    FLOAT   shift, and go to state 50
    DATE    shift, and go to state 51
    SSS     shift, and go to state 52
    '-'     shift, and go to state 53

    value       go to state 54
    expression  go to state 96


State 54

   89 expression: value •

    $default  reduce using rule 89 (expression)


State 55

   81 calc_stmt: CALC expression_list •

    $default  reduce using rule 81 (calc_stmt)


State 56

   82 expression_list: expression •  [$end, SEMICOLON]
   83                | expression • COMMA expression_list
   84 expression: expression • '+' expression
   85           | expression • '-' expression
   86           | expression • '*' expression
   87           | expression • '/' expression

    COMMA  shift, and go to state 97
    '+'    shift, and go to state 98
    '-'    shift, and go to state 99
    '*'    shift, and go to state 100
    '/'    shift, and go to state 101

    $default  reduce using rule 82 (expression_list)


State 57

  129 func_name: AGG_MAX •

    $default  reduce using rule 129 (func_name)


State 58

  130 func_name: AGG_MIN •

    $default  reduce using rule 130 (func_name)


State 59

  131 func_name: AGG_COUNT •

    $default  reduce using rule 131 (func_name)


State 60

  132 func_name: AGG_AVG •

    $default  reduce using rule 132 (func_name)


State 61

  133 func_name: AGG_SUM •

    $default  reduce using rule 133 (func_name)


State 62

  117 c_expr: LBRACE • a_expr RBRACE
  120 value_list_LALR: LBRACE • value_list_LA RBRACE
  121 select_stmt_with_paren: LBRACE • select_stmt RBRACE

    SELECT      shift, and go to state 4
    AGG_MAX     shift, and go to state 57
    AGG_MIN     shift, and go to state 58
    AGG_COUNT   shift, and go to state 59
    AGG_AVG     shift, and go to state 60
    AGG_SUM     shift, and go to state 61
    LBRACE      shift, and go to state 62
    NULL_T      shift, and go to state 48
    NOT_EXISTS  shift, and go to state 63
    EXISTS      shift, and go to state 64
    NUMBER      shift, and go to state 49
    FLOAT       shift, and go to state 50
    DATE        shift, and go to state 51
    ID          shift, and go to state 65
    SSS         shift, and go to state 52
    '+'         shift, and go to state 66
    '-'         shift, and go to state 67

    value                   go to state 102
    select_stmt             go to state 103
    a_expr                  go to state 104
    c_expr                  go to state 71
    value_list_LALR         go to state 72
    select_stmt_with_paren  go to state 73
    value_list_LA           go to state 105
    function                go to state 75
    func_LA                 go to state 76
    func_name               go to state 77
    rel_attr                go to state 78


State 63

  116 a_expr: NOT_EXISTS • LBRACE select_stmt RBRACE

    LBRACE  shift, and go to state 106


State 64

  115 a_expr: EXISTS • LBRACE select_stmt RBRACE

    LBRACE  shift, and go to state 107


State 65

  134 rel_attr: ID •  [$end, SEMICOLON, DESC, ASC, GROUP_BY, RBRACE, COMMA, FROM, WHERE, OR, HAVING, AND, EQ, LT, GT, LE, GE, NE, LIKE, NOT_LIKE, IS, IS_NOT, INNER_JOIN, NOT_IN, IN, ORDER_BY, '+', '-', '*', '/']
  135         | ID • DOT ID

    DOT  shift, and go to state 108

    $default  reduce using rule 134 (rel_attr)


State 66

   96 a_expr: '+' • a_expr

    AGG_MAX     shift, and go to state 57
    AGG_MIN     shift, and go to state 58
    AGG_COUNT   shift, and go to state 59
    AGG_AVG     shift, and go to state 60
    AGG_SUM     shift, and go to state 61
    LBRACE      shift, and go to state 62
    NULL_T      shift, and go to state 48
    NOT_EXISTS  shift, and go to state 63
    EXISTS      shift, and go to state 64
    NUMBER      shift, and go to state 49
    FLOAT       shift, and go to state 50
    DATE        shift, and go to state 51
    ID          shift, and go to state 65
    SSS         shift, and go to state 52
    '+'         shift, and go to state 66
    '-'         shift, and go to state 67

    value                   go to state 69
    a_expr                  go to state 109
    c_expr                  go to state 71
    value_list_LALR         go to state 72
    select_stmt_with_paren  go to state 73
    function                go to state 75
    func_LA                 go to state 76
    func_name               go to state 77
    rel_attr                go to state 78


State 67

   95 a_expr: '-' • a_expr

    AGG_MAX     shift, and go to state 57
    AGG_MIN     shift, and go to state 58
    AGG_COUNT   shift, and go to state 59
    AGG_AVG     shift, and go to state 60
    AGG_SUM     shift, and go to state 61
    LBRACE      shift, and go to state 62
    NULL_T      shift, and go to state 48
    NOT_EXISTS  shift, and go to state 63
    EXISTS      shift, and go to state 64
    NUMBER      shift, and go to state 49
    FLOAT       shift, and go to state 50
    DATE        shift, and go to state 51
    ID          shift, and go to state 65
    SSS         shift, and go to state 52
    '+'         shift, and go to state 66
    '-'         shift, and go to state 67

    value                   go to state 69
    a_expr                  go to state 110
    c_expr                  go to state 71
    value_list_LALR         go to state 72
    select_stmt_with_paren  go to state 73
    function                go to state 75
    func_LA                 go to state 76
    func_name               go to state 77
    rel_attr                go to state 78


State 68

  124 select_attr: '*' • a_expr_list

    COMMA  shift, and go to state 111

    $default  reduce using rule 138 (a_expr_list)

    a_expr_list  go to state 112


State 69

   91 a_expr: value •

    $default  reduce using rule 91 (a_expr)


State 70

   97 a_expr: a_expr • '+' a_expr
   98       | a_expr • '-' a_expr
   99       | a_expr • '*' a_expr
  100       | a_expr • '/' a_expr
  101       | a_expr • AND a_expr
  102       | a_expr • OR a_expr
  103       | a_expr • EQ a_expr
  104       | a_expr • LT a_expr
  105       | a_expr • GT a_expr
  106       | a_expr • LE a_expr
  107       | a_expr • GE a_expr
  108       | a_expr • NE a_expr
  109       | a_expr • LIKE a_expr
  110       | a_expr • NOT_LIKE a_expr
  111       | a_expr • IS_NOT a_expr
  112       | a_expr • IS a_expr
  113       | a_expr • NOT_IN a_expr
  114       | a_expr • IN a_expr
  125 select_attr: a_expr • a_expr_list

    COMMA     shift, and go to state 111
    OR        shift, and go to state 113
    AND       shift, and go to state 114
    EQ        shift, and go to state 115
    LT        shift, and go to state 116
    GT        shift, and go to state 117
    LE        shift, and go to state 118
    GE        shift, and go to state 119
    NE        shift, and go to state 120
    LIKE      shift, and go to state 121
    NOT_LIKE  shift, and go to state 122
    IS        shift, and go to state 123
    IS_NOT    shift, and go to state 124
    NOT_IN    shift, and go to state 125
    IN        shift, and go to state 126
    '+'       shift, and go to state 127
    '-'       shift, and go to state 128
    '*'       shift, and go to state 129
    '/'       shift, and go to state 130

    $default  reduce using rule 138 (a_expr_list)

    a_expr_list  go to state 131


State 71

   94 a_expr: c_expr •

    $default  reduce using rule 94 (a_expr)


State 72

  119 c_expr: value_list_LALR •

    $default  reduce using rule 119 (c_expr)


State 73

   93 a_expr: select_stmt_with_paren •

    $default  reduce using rule 93 (a_expr)


State 74

   74 select_stmt: SELECT select_attr • FROM ID rel_list where order group_by having
   75            | SELECT select_attr • FROM join where order group_by having

    FROM  shift, and go to state 132


State 75

  118 c_expr: function •

    $default  reduce using rule 118 (c_expr)


State 76

  126 function: func_LA • a_expr RBRACE
  127         | func_LA • '*' RBRACE

    AGG_MAX     shift, and go to state 57
    AGG_MIN     shift, and go to state 58
    AGG_COUNT   shift, and go to state 59
    AGG_AVG     shift, and go to state 60
    AGG_SUM     shift, and go to state 61
    LBRACE      shift, and go to state 62
    NULL_T      shift, and go to state 48
    NOT_EXISTS  shift, and go to state 63
    EXISTS      shift, and go to state 64
    NUMBER      shift, and go to state 49
    FLOAT       shift, and go to state 50
    DATE        shift, and go to state 51
    ID          shift, and go to state 65
    SSS         shift, and go to state 52
    '+'         shift, and go to state 66
    '-'         shift, and go to state 67
    '*'         shift, and go to state 133

    value                   go to state 69
    a_expr                  go to state 134
    c_expr                  go to state 71
    value_list_LALR         go to state 72
    select_stmt_with_paren  go to state 73
    function                go to state 75
    func_LA                 go to state 76
    func_name               go to state 77
    rel_attr                go to state 78


State 77

  128 func_LA: func_name • LBRACE

    LBRACE  shift, and go to state 135


State 78

   92 a_expr: rel_attr •

    $default  reduce using rule 92 (a_expr)


State 79

   32 desc_table_stmt: DESC ID •

    $default  reduce using rule 32 (desc_table_stmt)


State 80

   30 show_tables_stmt: SHOW TABLES •

    $default  reduce using rule 30 (show_tables_stmt)


State 81

   31 show_index_stmt: SHOW INDEX • FROM ID

    FROM  shift, and go to state 136


State 82

   51 insert_stmt: INSERT INTO • ID VALUES LBRACE value_with_MINUS value_list_with_MINUS RBRACE insert_list

    ID  shift, and go to state 137


State 83

   67 delete_stmt: DELETE FROM • ID where

    ID  shift, and go to state 138


State 84

   68 update_stmt: UPDATE ID • SET update_expr where

    SET  shift, and go to state 139


State 85

  157 set_variable_stmt: SET ID • EQ value

    EQ  shift, and go to state 140


State 86

  155 load_data_stmt: LOAD DATA • INFILE SSS INTO TABLE ID

    INFILE  shift, and go to state 141


State 87

  156 explain_stmt: EXPLAIN command_wrapper •
